--- a/META.yml
+++ b/META.yml
@@ -7,12 +7,12 @@ build_requires:
   JSON::XS: 0
   List::Util: 0
   Test::More: 0
-  TestParseMIME: 0
   constant: 0
+  lib: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300010, CPAN::Meta::Converter version 2.120630'
+generated_by: 'Dist::Zilla version 5.016, CPAN::Meta::Converter version 2.140640'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -26,4 +26,4 @@ resources:
   bugtracker: http://github.com/ap/Parse-MIME/issues
   homepage: http://github.com/ap/Parse-MIME
   repository: git://github.com/ap/Parse-MIME
-version: 1.000
+version: 1.001
