Import of ARISTOTLE/Parse-MIME-1.002.tar.gz from CPAN.
gitpan-cpan-distribution: Parse-MIME
gitpan-cpan-version:      1.002
gitpan-cpan-path:         ARISTOTLE/Parse-MIME-1.002.tar.gz
gitpan-cpan-author:       ARISTOTLE
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,9 @@
 name    = Parse-MIME
-version = 1.001
+version = 1.002
 author  = Aristotle Pagaltzis <pagaltzis@gmx.de>
 license = Perl_5
 copyright_holder = Aristotle Pagaltzis
-copyright_year   = 2012
+copyright_year   = 2015
 
 [MetaResources]
 homepage   = http://github.com/ap/Parse-MIME
@@ -11,8 +11,11 @@ bugtracker = http://github.com/ap/Parse-MIME/issues
 repository = git://github.com/ap/Parse-MIME
 
 [@Basic]
+[InstallGuide]
 [MetaJSON]
 [PkgVersion]
 [PodWeaver]
 [CheckChangeLog]
+[Test::Compile]
 [AutoPrereqs]
+[CheckSelfDependency]
